src/objects/Activite__c.object
<CustomObject>
    <fields>
        <fullName>cout__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>delai__c</fullName>
        <label>Deadline</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>plan_Action__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Action Plan</label>
        <referenceTo>Plan_Action__c</referenceTo>
        <relationshipLabel>Actions Plan Activites</relationshipLabel>
        <relationshipName>Actions_Plan_Activites</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>responsable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Responsible</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Actions Plan Activites</relationshipLabel>
        <relationshipName>Actions_Plan_Activites</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>statut__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Fait</fullName>
                </value>
                <value>
                    <fullName>Non fait</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Corrective</fullName>
                </value>
                <value>
                    <fullName>Preventive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Action Plan Activity</label>
    <nameField>
        <label>activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions Plan Activites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Deadline_less_than_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>date__c &gt;  delai__c</errorConditionFormula>
        <errorMessage>the start date can not be greater than the due date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Plan_Action_State_Closed</fullName>
        <active>true</active>
        <errorConditionFormula>plan_Action__r.etat__c  = true</errorConditionFormula>
        <errorMessage>Can not add activity when action plan is complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Responsible_must_be_in_same_structure</fullName>
        <active>true</active>
        <errorConditionFormula>plan_Action__r.risque_Entite__r.Entite__r.Id  &lt;&gt;   responsable__r.Account.Id</errorConditionFormula>
        <errorMessage>the manager must be in the same structure as the action plan of the activity</errorMessage>
    </validationRules>
</CustomObject>